# DexKit-Android

./: .gitignore  .gitmodules  README.md  README_zh.md
dexkit/: build.gradle
dexkit/src/main/: AndroidManifest.xml  CMakeLists.txt
dexkit/src/main/java/com/github/LuckyPray/: DexKitHelper.kt
dexkit/src/main/jni/: CMakeLists.txt  jni.cpp
